--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React.js using NPM, Babel6 and Webpack</title>
+    <title>PokeReact !</title>
   </head>
   <body>
-    <div id="app" />
-     <script src="/static/bundle.js"></script>
+    <div id="app"/>
+
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
